--- a/latexpad.cabal
+++ b/latexpad.cabal
@@ -19,7 +19,9 @@ library
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , servant-server
+                     , text
                      , wai
+                     , wai-extra
                      , warp
   default-language:    Haskell2010
 
