--- a/latexpad.cabal
+++ b/latexpad.cabal
@@ -1,13 +1,13 @@
 name:                latexpad
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            LaTeX Scratchpad with save functionality.
 description:         Please see README.md
-homepage:            https://github.com/githubuser/latexpad#readme
+homepage:            https://github.com/alvare/latexpad#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
+author:              Ezequiel Alvarez
+maintainer:          welcometothechango@gmail.com
+copyright:           2016 Ezequiel Alvarez
 category:            Web
 build-type:          Simple
 -- extra-source-files:
@@ -40,15 +40,6 @@ executable latexpad-exe
                      , latexpad
   default-language:    Haskell2010
 
-test-suite latexpad-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , latexpad
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
-
 source-repository head
   type:     git
-  location: https://github.com/githubuser/latexpad
+  location: https://github.com/alvare/latexpad
