--- a/latexpad.cabal
+++ b/latexpad.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib, Store
-  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , acid-state
