--- a/latexpad.cabal
+++ b/latexpad.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib, Store
+  exposed-modules:     API, App, Store
   ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5
                      , aeson
@@ -28,16 +28,41 @@ library
                      , servant-server
                      , text
                      , transformers
-                     , wai
-                     , wai-extra
-                     , warp
   default-language:    Haskell2010
 
-executable latexpad-exe
+executable latexpad-server
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , wai-extra
+                     , warp
+                     , latexpad
+  default-language:    Haskell2010
+
+executable latexpad-swagger
+  hs-source-dirs:      app
+  main-is:             Swagger.hs
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , bytestring
+                     , aeson-pretty
+                     , servant-swagger
+                     , swagger2
+                     , latexpad
+  default-language:    Haskell2010
+
+executable latexpad-mock
+  hs-source-dirs:      app
+  main-is:             Mock.hs
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , QuickCheck
+                     , servant
+                     , servant-server
+                     , servant-mock
+                     , text
+                     , warp
                      , latexpad
   default-language:    Haskell2010
 
